# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")

ohos_shared_library("runninglock") {
  include_dirs = [ "../utils" ]
  sources = [
    "../utils/async_callback_info.cpp",
    "../utils/napi_errors.cpp",
    "../utils/napi_utils.cpp",
    "runninglock_interface.cpp",
    "runninglock_module.cpp",
    "runninglock_napi.cpp",
  ]
  configs = [ "${powermgr_utils_path}:utils_config" ]
  deps = [ "${powermgr_innerkits}:powermgr_client" ]
  if (!build_public_version) {
    external_deps = [ "hilog_native:libhilog" ]
  } else {
    external_deps = [
      "hilog_native:libhilog",
      "napi:ace_napi",
    ]
  }

  relative_install_dir = "module"

  subsystem_name = "powermgr"
  part_name = "${powermgr_part_name}"
}
