# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/powermgr/power_manager/powermgr.gni")
import("//build/ohos.gni")

## Install power_mode_config.xml to /system/etc/power_config/power_mode_config.xml
ohos_prebuilt_etc("power_mode_config") {
  source = "power_mode_config.xml"
  relative_install_dir = "power_config"
  part_name = "${powermgr_part_name}"
  subsystem_name = "powermgr"
}

## Install vendor power_mode_config.xml to /vendor/etc/power_config/power_mode_config.xml
ohos_prebuilt_etc("power_mode_config_vendor") {
  source = "//vendor/${product_company}/${product_name}/power_config/power_mode_config.xml"
  relative_install_dir = "power_config"
  install_images = [ chipset_base_dir ]
  part_name = "${powermgr_part_name}"
  subsystem_name = "powermgr"
}

group("power_service_config") {
  deps = [ ":power_mode_config" ]

  VENDOR_CONFIG_PATH = rebase_path(
          "//vendor/${product_company}/${product_name}/power_config/power_mode_config.xml")
  CMD = "if [ -f ${VENDOR_CONFIG_PATH} ]; then echo true; else echo false; fi"
  vendor_config_exist =
      exec_script("//build/lite/run_shell_cmd.py", [ CMD ], "value")
  if (vendor_config_exist) {
    deps += [ ":power_mode_config_vendor" ]
  }
}
