# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/powermgr/power_manager/powermgr.gni")
import("//build/ohos.gni")

## Install power_mode_config.xml to /system/etc/power_config/power_mode_config.xml
ohos_prebuilt_etc("power_mode_config") {
  source = "power_mode_config.xml"
  relative_install_dir = "power_config"
  part_name = "${powermgr_part_name}"
  subsystem_name = "powermgr"
}

group("power_service_config") {
  deps = [ ":power_mode_config" ]
}
