# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("../../../powermgr.gni")

## Install power_mode_config.xml to /system/etc/power_config/power_mode_config.xml
ohos_prebuilt_etc("power_mode_config") {
  source = "power_mode_config.xml"
  relative_install_dir = "power_config"
  part_name = "${powermgr_part_name}"
  subsystem_name = "powermgr"
}

## Install power_suspend.json to /system/etc/power_config/power_suspend.json
ohos_prebuilt_etc("power_suspend_config") {
  source = "power_suspend.json"
  relative_install_dir = "power_config"
  install_images = [ system_base_dir ]
  part_name = "${powermgr_part_name}"
  subsystem_name = "powermgr"
}

## Install power_wakeup.json to /system/etc/power_config/power_wakeup.json
ohos_prebuilt_etc("power_wakeup_config") {
  source = "power_wakeup.json"
  relative_install_dir = "power_config"
  install_images = [ system_base_dir ]
  part_name = "${powermgr_part_name}"
  subsystem_name = "powermgr"
}

## Install power_vibrator.json to /system/etc/power_config/power_vibrator.json
ohos_prebuilt_etc("power_vibrator_config") {
  source = "power_vibrator.json"
  relative_install_dir = "power_config"
  install_images = [ system_base_dir ]
  part_name = "${powermgr_part_name}"
  subsystem_name = "powermgr"
}

if (power_manager_feature_wakeup_action) {
  ## Install power_wakeup_action.json to /system/etc/power_config/power_wakeup_action.json
  ohos_prebuilt_etc("power_wakeup_action_config") {
    source = "power_wakeup_action.json"
    relative_install_dir = "power_config"
    install_images = [ system_base_dir ]
    part_name = "${powermgr_part_name}"
    subsystem_name = "powermgr"
  }
}

group("power_service_config") {
  deps = [
    ":power_mode_config",
    ":power_suspend_config",
    ":power_vibrator_config",
    ":power_wakeup_config",
  ]

  if (power_manager_feature_wakeup_action) {
    deps += [ ":power_wakeup_action_config" ]
  }
}
