# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")
import("//build/test.gni")

module_output_path = "${powermgr_part_name}/powermgr_native"

##############################fuzztest##########################################
ohos_fuzztest("PowerFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/powermgr/power_manager/test/fuzztest/power_fuzzer"

  include_dirs = [
    "./",
    "${powermgr_utils_path}:utils_config",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "./power_fuzzer.cpp" ]
  deps = [ "${powermgr_innerkits}:powermgr_client" ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":PowerFuzzTest",
  ]
}
###############################################################################
