# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../powermgr.gni")

module_output_path = "power_manager/power_manager"

ohos_unittest("test_power_cli") {
  module_out_path = module_output_path

  sources = [
    "../src/power_cli_command.cpp",
    "../src/power_cli_enum_parser.cpp",
    "power_cli_test.cpp",
  ]

  include_dirs = [
    "../include",
    "${powermgr_inner_api}/native/include",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  deps = [
    "${powermgr_inner_api}:powermgr_client",
  ]

  defines += [ "POWER_GTEST" ]

  subsystem_name = "powermgr"
  part_name = "${powermgr_part_name}"
}

group("cli-test") {
  testonly = true
  deps = []
  if (power_manager_feature_support_power_cli) {
    deps += [ ":test_power_cli" ]
  }
}
