# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")
import("//foundation/arkui/ace_engine/build/ace_gen_sa_dialog_js.gni")

gen_sa_dialog_js("dialog_js_files_etc") {
  project_path = "//base/powermgr/power_manager/frameworks/dialog/dialog_ui/js"
  i18n_files = [
    "i18n/en-US.json",
    "i18n/zh-CN.json",
  ]
  common_files = []
  dialog_name = "power_dialog"
  part_name = "${powermgr_native_part_name}"
  subsystem_name = "powermgr"
}
